WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278644
REGRESSION(
281966@main
): [GTK] can't drag and drop files to a gitlab issue
https://bugs.webkit.org/show_bug.cgi?id=278644
Summary
REGRESSION(281966@main): [GTK] can't drag and drop files to a gitlab issue
darkblaze69
Reported
2024-08-26 01:30:59 PDT
* Epiphany 47.beta-40-g98823e788 * webkitgtk 2.45.90 * GNOME 47.beta * Arch Linux After upgrading from 2.45.6 to 2.45.90 can't drag and drop files to a gitlab issue. Bisected to 9febfdbe1756 ("Add validation to file-backed blob urls from WebContent").
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2024-08-27 08:43:34 PDT
The problem is that WebPageProxy::performDragOperation() no longer sends the request to the web process immediately, but after sending a message to the network process. In GTK the leave notification is emitted right after the drop, so we end up sending the exit operation to the web process before the actual drop operation.
Carlos Garcia Campos
Comment 2
2024-08-28 01:15:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32809
EWS
Comment 3
2024-08-28 04:10:32 PDT
Committed
282837@main
(53e913bba2fa): <
https://commits.webkit.org/282837@main
> Reviewed commits have been landed. Closing PR #32809 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug